# Parallel-Computer-Architecture

./: .gitignore
PCA_01/: CMakeLists.txt
PCA_01/PCA/: CMakeCache.txt  CMakeLists.txt  PCA.cpp  PCA.h  out.txt  run.sh
PCA_02/: CMakeCache.txt  CMakeLists.txt  PCA_02.cpp  PCA_02.h  out.txt  run.sh
PCA_03/: CMakeCache.txt  CMakeLists.txt  Makefile  PCA_03  PCA_03.cpp  PCA_03.h  PCA_03.sh  cmake_install.cmake  out.txt  outLast.txt  run.sh
PCA_04/: CMakeLists.txt  PCA_04.cpp  PCA_04.h  run.sh
